@@ -21,11 +21,8 @@
 
 package org.opencastproject.util;
 
-import static com.entwinemedia.fn.Stream.$;
 import static org.opencastproject.util.data.Collections.map;
 import static org.opencastproject.util.data.Collections.toArray;
-import static org.opencastproject.util.data.Option.none;
-import static org.opencastproject.util.data.Option.some;
 import static org.opencastproject.util.data.Tuple.tuple;
 
 import org.opencastproject.job.api.Job;
@@ -34,15 +31,8 @@ import org.opencastproject.job.api.JobBarrier;
 import org.opencastproject.job.api.JobParser;
 import org.opencastproject.mediapackage.MediaPackageElement;
 import org.opencastproject.mediapackage.MediaPackageElementParser;
-import org.opencastproject.mediapackage.MediaPackageException;
 import org.opencastproject.serviceregistry.api.ServiceRegistry;
 import org.opencastproject.serviceregistry.api.ServiceRegistryException;
-import org.opencastproject.util.data.Function;
-import org.opencastproject.util.data.Option;
-
-import com.entwinemedia.fn.Fn2;
-import com.entwinemedia.fn.Pred;
-import com.entwinemedia.fn.data.Opt;
 
 import org.apache.http.HttpResponse;
 import org.slf4j.Logger;
@@ -50,6 +40,8 @@ import org.slf4j.LoggerFactory;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 /** Job related utility functions. */
 public final class JobUtil {
@@ -64,12 +56,13 @@ public final class JobUtil {
    *
    * @return the payload or none, if either to job cannot be found or if the job has no or an empty payload
    */
-  public static Opt<String> getPayload(ServiceRegistry reg, Job job)
+  public static Optional<String> getPayload(ServiceRegistry reg, Job job)
           throws NotFoundException, ServiceRegistryException {
-    for (Job updated : update(reg, job)) {
-      return Opt.nul(updated.getPayload());
+    Optional<Job> updatedOpt = update(reg, job);
+    if (updatedOpt.isPresent()) {
+      return Optional.ofNullable(updatedOpt.get().getPayload());
     }
-    return Opt.none();
+    return Optional.empty();
   }
 
   /**
@@ -77,11 +70,11 @@ public final class JobUtil {
    *
    * @return the updated job or none, if it cannot be found
    */
-  public static Opt<Job> update(ServiceRegistry reg, Job job) throws ServiceRegistryException {
+  public static Optional<Job> update(ServiceRegistry reg, Job job) throws ServiceRegistryException {
     try {
-      return Opt.some(reg.getJob(job.getId()));
+      return Optional.of(reg.getJob(job.getId()));
     } catch (NotFoundException e) {
-      return Opt.none();
+      return Optional.empty();
     }
   }
 
@@ -190,7 +183,7 @@ public final class JobUtil {
   }
 
   /** Check if <code>job</code> is not done yet and wait in case. */
-  public static JobBarrier.Result waitForJob(Job waiter, ServiceRegistry reg, Option<Long> timeout, Job job) {
+  public static JobBarrier.Result waitForJob(Job waiter, ServiceRegistry reg, Optional<Long> timeout, Job job) {
     final Job.Status status = job.getStatus();
     // only create a barrier if the job is not done yet
     switch (status) {
@@ -200,14 +193,14 @@ public final class JobUtil {
       case FINISHED:
         return new JobBarrier.Result(map(tuple(job, status)));
       default:
-        for (Long t : timeout)
-          return waitForJobs(waiter, reg, t, job);
+        if (timeout.isPresent())
+          return waitForJobs(waiter, reg, timeout.get(), job);
         return waitForJobs(waiter, reg, job);
     }
   }
 
   /** Check if <code>job</code> is not done yet and wait in case. */
-  public static JobBarrier.Result waitForJob(ServiceRegistry reg, Option<Long> timeout, Job job) {
+  public static JobBarrier.Result waitForJob(ServiceRegistry reg, Optional<Long> timeout, Job job) {
     return waitForJob(null, reg, timeout, job);
   }
 
@@ -223,12 +216,12 @@ public final class JobUtil {
    * @return the job barrier result
    */
   public static JobBarrier.Result waitForJob(Job waiter, ServiceRegistry reg, Job job) {
-    return waitForJob(waiter, reg, none(0L), job);
+    return waitForJob(waiter, reg, Optional.empty(), job);
   }
 
   /** Check if <code>job</code> is not done yet and wait in case. */
   public static JobBarrier.Result waitForJob(ServiceRegistry reg, Job job) {
-    return waitForJob(null, reg, none(0L), job);
+    return waitForJob(null, reg, Optional.empty(), job);
   }
 
   /**
@@ -261,70 +254,58 @@ public final class JobUtil {
   }
 
   /** Wait for the job to complete and return the success value. */
-  public static Function<Job, Boolean> waitForJobSuccess(final Job waiter, final ServiceRegistry reg,
-          final Option<Long> timeout) {
-    return new Function<Job, Boolean>() {
-      @Override
-      public Boolean apply(Job job) {
-        return waitForJob(waiter, reg, timeout, job).isSuccess();
-      }
-    };
+  public static boolean waitForJobSuccess(final Job waiter, final ServiceRegistry reg,
+      final Optional<Long> timeout, Job job) {
+    return waitForJob(waiter, reg, timeout, job).isSuccess();
   }
+
 
   /**
    * Interpret the payload of a completed {@link Job} as a {@link MediaPackageElement}. Wait for the job to complete if
    * necessary.
    *
    */
-  public static Function<Job, MediaPackageElement> payloadAsMediaPackageElement(final Job waiter,
-          final ServiceRegistry reg) {
-    return new Function.X<Job, MediaPackageElement>() {
-      @Override
-      public MediaPackageElement xapply(Job job) throws MediaPackageException {
-        waitForJob(waiter, reg, none(0L), job);
-        return MediaPackageElementParser.getFromXml(job.getPayload());
-      }
-    };
+  public static MediaPackageElement payloadAsMediaPackageElement(final Job waiter,
+      final ServiceRegistry reg,
+      Job job) {
+    try {
+      waitForJob(waiter, reg, Optional.empty(), job);
+      return MediaPackageElementParser.getFromXml(job.getPayload());
+    } catch (Exception e) {
+      throw new RuntimeException(e);
+    }
   }
 
   /**
    * Interpret the payload of a completed {@link Job} as a {@link MediaPackageElement}. Wait for the job to complete if
    * necessary.
    */
-  public static Function<Job, MediaPackageElement> payloadAsMediaPackageElement(final ServiceRegistry reg) {
-    return payloadAsMediaPackageElement(null, reg);
+  public static MediaPackageElement payloadAsMediaPackageElement(final ServiceRegistry reg,
+      Job job) {
+    return payloadAsMediaPackageElement(null, reg, job);
   }
 
-  public static final Function<HttpResponse, Option<Job>> jobFromHttpResponse = new Function<HttpResponse, Option<Job>>() {
-    @Override
-    public Option<Job> apply(HttpResponse response) {
-      try {
-        return some(JobParser.parseJob(response.getEntity().getContent()));
-      } catch (Exception e) {
-        logger.error("Error parsing Job from HTTP response", e);
-        return none();
-      }
+  public static Optional<Job> jobFromHttpResponse(HttpResponse response) {
+    try {
+      return Optional.of(JobParser.parseJob(response.getEntity().getContent()));
+    } catch (Exception e) {
+      logger.error("Error parsing Job from HTTP response", e);
+      return Optional.empty();
     }
-  };
+  }
 
   /** Sum up the queue time of a list of jobs. */
   public static long sumQueueTime(List<Job> jobs) {
-    return $(jobs).foldl(0L, new Fn2<Long, Job, Long>() {
-      @Override
-      public Long apply(Long sum, Job job) {
-        return sum + job.getQueueTime();
-      }
-    });
+    return jobs.stream()
+        .mapToLong(Job::getQueueTime)
+        .sum();
   }
 
   /** Get all jobs that are not in state {@link org.opencastproject.job.api.Job.Status#FINISHED}. */
   public static List<Job> getNonFinished(List<Job> jobs) {
-    return $(jobs).filter(new Pred<Job>() {
-      @Override
-      public Boolean apply(Job job) {
-        return !job.getStatus().equals(Status.FINISHED);
-      }
-    }).toList();
+    return jobs.stream()
+        .filter(job -> !job.getStatus().equals(Status.FINISHED))
+        .collect(Collectors.toList());
   }
 
 }
